# minifb

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  tundra.lua  units.lua
cmake/: minifb-config.cmake.in  minifb_cmake_helpers.cmake  versioning.cmake
examples/: fullscreen.c  multiple_windows.c  timer.c  version_info.c
examples/android/native2021/app/: build.gradle
examples/android/native2021/app/src/main/: AndroidManifest.xml
examples/android/native2021/app/src/main/cpp/: noise.c
examples/android/native2026/: settings.gradle.kts
examples/android/native2026/app/: build.gradle.kts
examples/android/native2026/app/src/main/: AndroidManifest.xml
examples/android/native2026/app/src/main/cpp/: CMakeLists.txt
examples/android/native2026/app/src/main/java/com/example/noise/: MiniFBActivity.java
examples/dos/: debug_dos.c  gdbstub.h
examples/ios/: AppDelegate.m  Info.no_storyboard.plist  Info.plist
examples/web/: index.html  input_events.html  multiple_windows.html
include/: MiniFB.h  MiniFB_cpp.h  MiniFB_enums.h  MiniFB_ex.h  MiniFB_ex_cpp.h  MiniFB_ex_enums.h  MiniFB_internal.h  MiniFB_ios.h  MiniFB_keylist.h  MiniFB_macros.h  MiniFB_types.h  minifb_version.h.in
scripts/: generate-protocols.sh
src/: MiniFB_common.c  MiniFB_cpp.cpp  MiniFB_ex.c  MiniFB_ex_cpp.cpp  MiniFB_internal.c  MiniFB_internal.h  MiniFB_linux.c  MiniFB_monitor.c  MiniFB_timer.c  MiniFB_utf8.c  MiniFB_utf8.h  WindowData.h
src/android/: AndroidMiniFB.c  WindowData_Android.h
src/dos/: DOSMiniFB.c  vesa.c  vesa.h
src/gl/: MiniFB_GL.c  MiniFB_GL.h
src/ios/: WindowData_IOS.h  iOSMiniFB.m  iOSView.h  iOSView.m  iOSViewController.h  iOSViewController.m  iOSViewDelegate.h  iOSViewDelegate.m
src/macos/: MacMiniFB.m  OSXView.h  OSXView.m  OSXViewDelegate.m  OSXWindow.m
src/macosx/: MacMiniFB.m  MacMiniFB_monitor.m  OSXView.h  OSXView.m  OSXViewController.h  OSXViewController.m  OSXViewDelegate.h  OSXViewDelegate.m  OSXWindow.h  OSXWindow.m  OSXWindowData.h  OSXWindowFrameView.h  OSXWindowFrameView.m  WindowData_OSX.h
src/wayland/: WaylandMiniFB.c  WaylandMiniFB_ex.c  WaylandMiniFB_input_keyboard.c  WaylandMiniFB_input_keyboard.h  WaylandMiniFB_monitor.c  WaylandWindowData.h  WindowData_Way.h
src/web/: WebMiniFB.c  WindowData_Web.h
src/windows/: WinMiniFB.c  WinMiniFB_dpi.c  WinMiniFB_dpi.h  WinMiniFB_ex.c  WinMiniFB_monitor.c  WinWindowData.h  WindowData_Win.h
src/x11/: WindowData_X11.h  X11MiniFB.c  X11MiniFB_ex.c  X11MiniFB_monitor.c  X11MiniFB_scale_funcs.c  X11MiniFB_scale_funcs.h  X11WindowData.h
tests/: dpi_change_test.c  fullscreen.c  hide_cursor.c  hidpi.c  input_events.c  input_events_cpp.cpp  multiple_windows.c  noise.c  show_monitor_info.c  timer.c  version_info.c
tests/android/: build.gradle
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/cpp/: CMakeLists.txt  noise.c
tests/android/app/src/main/res/values/: strings.xml
tests/android/gradle/wrapper/: gradle-wrapper.properties
tests/android/native2021/app/src/main/cpp/: CMakeLists.txt  noise.c
tests/android/native2021/gradle/wrapper/: gradle-wrapper.properties
tests/android/native2026/: gradle.properties
tests/android/native2026/app/src/main/: AndroidManifest.xml
tests/android/native2026/app/src/main/cpp/: CMakeLists.txt  noise.c
tests/android/native2026/app/src/main/res/values/: strings.xml  styles.xml
tests/android/native2026/gradle/: libs.versions.toml
tests/android/native2026/gradle/wrapper/: gradle-wrapper.properties
tests/dos/: debug_dos.c  dos.c  gdbstub.h
tests/dos/tools/: dosbox-x.conf  download-dos-tools.sh  toolchain-djgpp.cmake
tests/ios/: AppDelegate.h  AppDelegate.m  LaunchScreen.storyboard  main.m
tests/web/: hidpi.html  noise.html  timer.html
tools/dos/: download-dos-tools.sh  toolchain-djgpp.cmake
tools/wayland/: generate-protocols.sh
